<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">alper_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_60">60</string>
<string name="lbl_5500_steps">5500 steps</string>
<string name="lbl_steps">Steps</string>
<string name="lbl_20">20</string>
<string name="lbl_height">Height</string>
<string name="lbl_10000_steps">10000 steps</string>
<string name="msg_dd_mm_yyyy_hh_m">DD/MM/YYYY HH:MM</string>
<string name="lbl_21">21</string>
<string name="msg_account_informa">Account Information</string>
<string name="lbl_age">Age</string>
<string name="lbl_steps_history">Steps History</string>
<string name="lbl_esp32_3">ESP32 - 3</string>
<string name="lbl_66_kg">66 kg</string>
<string name="lbl_date_of_birth">Date of Birth</string>
<string name="lbl_100">100</string>
<string name="lbl_you_re_offline">You\u2019re offline</string>
<string name="msg_already_have_an">Already have an account?</string>
<string name="lbl_06_09">06.09</string>
<string name="lbl_esp32_1">ESP32 - 1</string>
<string name="lbl_esp32_2">ESP32 - 2</string>
<string name="lbl_female">Female</string>
<string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem  </string>
<string name="lbl_180">180</string>
<string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>
<string name="lbl_retry">Retry</string>
<string name="lbl_7000_steps">7000 steps</string>
<string name="lbl_jade_mail_com">jade@mail.com</string>
<string name="lbl_message_5">Message 5</string>
<string name="lbl_message_4">Message 4</string>
<string name="lbl_log_in">log in.</string>
<string name="lbl_140">140</string>
<string name="lbl_message_3">Message 3</string>
<string name="lbl_today">Today</string>
<string name="lbl_message_2">Message 2</string>
<string name="lbl_message_1">Message 1</string>
<string name="lbl_mm_dd_yyyy">MM / DD / YYYY</string>
<string name="lbl_sign_in">Sign in.</string>
<string name="msg_target_step_cou">Target Step Count</string>
<string name="lbl_target_weight">Target Weight</string>
<string name="msg_enter_your_acco">Enter your account details or</string>
<string name="lbl_statistics">Statistics</string>
<string name="msg_available_devic">Available Devices</string>
<string name="lbl_notifications">Notifications</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_9000_steps">9000 steps</string>
<string name="lbl_weight_history">Weight History</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem  </string>
<string name="lbl_hello">HELLO</string>
<string name="lbl_67_kg">67 kg</string>
<string name="msg_create_an_accou">Create an account</string>
<string name="lbl_cancel">Cancel</string>
<string name="lbl_username">Username</string>
<string name="lbl_05_09">05.09</string>
<string name="lbl">************</string>
<string name="lbl_jade">Jade</string>
<string name="lbl_09_09">09.09</string>
<string name="msg_personal_inform">Personal Information</string>
<string name="lbl_save">Save</string>
<string name="msg_learn_your_body">Learn your body!</string>
<string name="lbl_email">Email</string>
<string name="msg_last_measuremen">Last Measurement</string>
<string name="lbl_log_in2">Log in</string>
<string name="lbl_80">80</string>
<string name="lbl_40">40</string>
<string name="lbl_0">0</string>
<string name="lbl_sign_out">Sign out</string>
<string name="lbl_gender">Gender</string>
<string name="lbl_10_000_daily">10.000 daily</string>
<string name="lbl_weight">Weight</string>
<string name="msg_are_you_sure_yo">Are you sure you want to sign out?</string>
<string name="lbl_04_09">04.09</string>
<string name="lbl_gateway_pairing">Gateway Pairing</string>
<string name="msg_are_you_sure_yo2">Are you sure you want to delete this account?</string>
<string name="lbl_08_09">08.09</string>
<string name="lbl_goals">Goals</string>
<string name="lbl_connect">Connect</string>
<string name="lbl_160">160</string>
<string name="lbl_e_mail2">E-mail</string>
<string name="lbl_120">120</string>
<string name="lbl_forgot_password">Forgot password</string>
<string name="lbl_sign_in2">Sign in</string>
<string name="lbl_60_kg">60 kg</string>
<string name="msg_let_s_start_bui">Let\u2019s start building a healthy life.</string>
<string name="lbl_current_weight">Current Weight</string>
<string name="lbl_forget">Forget</string>
<string name="lbl_password">Password</string>
<string name="lbl_6000_steps">6000 steps</string>
<string name="lbl_170_cm">170 cm</string>
<string name="lbl_5000_steps">5000 steps</string>
<string name="lbl_delete_account">Delete Account</string>
<string name="lbl_07_09">07.09</string>
<string name="msg_connect_to_the">Connect to the Internet</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
