<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="createAnAccountVM" type="com.alpersapplication.app.modules.createanaccount.data.viewmodel.CreateAnAccountVM"/>
    </data>
    <FrameLayout android:id="@+id/frameCreateanaccou"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <ImageButton
                android:background="@drawable/rectangle_bg_bluegray_50_radius_20"
                android:id="@+id/btnArrowleft"
                android:layout_gravity="start"
                android:layout_height="@dimen/_40pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_40pxh"
                android:paddingHorizontal="@dimen/_12pxh"
                android:paddingVertical="@dimen/_12pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtCreateanaccou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_39pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{createAnAccountVM.createAnAccountModel.txtCreateanaccou}"
                style="@style/txtInterbold24" tools:text="@string/msg_create_an_accou"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowenteryouracco"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEnteryouracco"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.82"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{createAnAccountVM.createAnAccountModel.txtEnteryouracco}"
                    style="@style/txtInterregular16" tools:text="@string/msg_enter_your_acco"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogin"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_weight="0.18"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{createAnAccountVM.createAnAccountModel.txtLogin}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_log_in"/>
            </LinearLayout>
            <FrameLayout android:id="@+id/frameStackusername"
                android:layout_gravity="start"
                android:layout_height="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_42pxv" android:layout_width="@dimen/_65pxh">
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtUsername"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{createAnAccountVM.createAnAccountModel.txtUsername}"
                    style="@style/txtInterregular14" tools:text="@string/lbl_username"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtUsernameOne"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{createAnAccountVM.createAnAccountModel.txtUsernameOne}"
                    style="@style/txtInterregular14" tools:text="@string/lbl_username"/>
            </FrameLayout>
            <View
                android:background="@drawable/rectangle_border_black_900_radius_6"
                android:id="@+id/viewUsernamebox"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_7pxv" android:layout_width="@dimen/_307pxh"/>
            <FrameLayout android:id="@+id/frameStackdateofbirth"
                android:layout_gravity="start"
                android:layout_height="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_26pxv" android:layout_width="@dimen/_80pxh">
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtDateofBirth"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{createAnAccountVM.createAnAccountModel.txtDateofBirth}"
                    style="@style/txtInterregular14" tools:text="@string/lbl_date_of_birth"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtDateofBirthOne"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{createAnAccountVM.createAnAccountModel.txtDateofBirthOne}"
                    style="@style/txtInterregular14" tools:text="@string/lbl_date_of_birth"/>
            </FrameLayout>
            <FrameLayout android:id="@+id/frameStackmmddyyyy"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_7pxv" android:layout_width="@dimen/_307pxh">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMMDDYYYY"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{createAnAccountVM.createAnAccountModel.txtMMDDYYYY}"
                    style="@style/txtInterregular14_1" tools:text="@string/lbl_mm_dd_yyyy"/>
                <FrameLayout android:id="@+id/frameStackcalendar"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_48pxv"
                    android:layout_width="@dimen/_307pxh" style="@style/groupStylecornerRadius">
                    <ImageView android:id="@+id/imageCalendar"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginEnd="@dimen/_21pxh"
                        android:layout_marginStart="@dimen/_21pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_calendar"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_calendar"/>
                </FrameLayout>
            </FrameLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{createAnAccountVM.createAnAccountModel.txtEmail}"
                style="@style/txtInterregular14" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_6"
                android:ellipsize="end" android:id="@+id/etEmailbox"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={createAnAccountVM.createAnAccountModel.etEmailboxValue}"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{createAnAccountVM.createAnAccountModel.txtPassword}"
                style="@style/txtInterregular14" tools:text="@string/lbl_password"/>
            <FrameLayout android:id="@+id/frameStackeye"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="@dimen/_307pxh" style="@style/groupStylecornerRadius">
                <ImageView android:id="@+id/imageEye"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginHorizontal="@dimen/_17pxh"
                    android:layout_marginVertical="@dimen/_17pxv"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_eye"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_eye"/>
            </FrameLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignUp"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="@dimen/_212pxh"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
        </LinearLayout>
    </FrameLayout>
</layout>
