<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="cantConnectToInternetVM" type="com.alpersapplication.app.modules.cantconnecttointernet.data.viewmodel.CantConnectToInternetVM"/>
    </data>
    <FrameLayout android:id="@+id/frameStackbackground"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameCantconnectto"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent" style="@style/groupStylewhite_A700">
            <ImageView android:id="@+id/imageBackground"
                android:layout_gravity="start"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_12pxh}"
                imageRes="@{@drawable/img_background}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_background"/>
            <LinearLayout android:id="@+id/linearColumnconnecttothe"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_300pxv"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_300pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_1">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtConnecttothe"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_49pxh"
                    android:layout_marginStart="@dimen/_49pxh"
                    android:layout_marginTop="@dimen/_29pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{cantConnectToInternetVM.cantConnectToInternetModel.txtConnecttothe}"
                    style="@style/txtIntersemibold16" tools:text="@string/msg_connect_to_the"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtYoureoffline"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_49pxh"
                    android:layout_marginStart="@dimen/_49pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{cantConnectToInternetVM.cantConnectToInternetModel.txtYoureoffline}"
                    style="@style/txtInterregular14" tools:text="@string/lbl_you_re_offline"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRetrybutton"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_49pxh"
                    android:layout_marginStart="@dimen/_49pxh"
                    android:layout_marginTop="@dimen/_48pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{cantConnectToInternetVM.cantConnectToInternetModel.txtRetrybutton}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_retry"/>
            </LinearLayout>
            <View android:background="@color/bluegray_600"
                android:id="@+id/lineLineThirtyFour"
                android:layout_gravity="center"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginHorizontal="@dimen/_40pxh"
                android:layout_marginVertical="@dimen/_40pxv" android:layout_width="@dimen/_273pxh"/>
        </FrameLayout>
    </FrameLayout>
</layout>
